Add feat get model curves on plane by selection

--- a/ProjectPlaneCurves/Views/Windows/MainWindow.xaml
+++ b/ProjectPlaneCurves/Views/Windows/MainWindow.xaml
@@ -74,9 +74,10 @@
                 <UniformGrid Rows="2">
                     <TextBlock Text="Линии в плане"
                                Style="{StaticResource TextAboveButton}" />
-                    <Button Style="{StaticResource SelectButton}" />
+                    <Button Style="{StaticResource SelectButton}" 
+                            Command="{Binding GetPlaneCurvesCommand}"/>
                 </UniformGrid>
-                <TextBox Text=""
+                <TextBox Text="{Binding PlaneCurvesElemIds}"
                          Style="{StaticResource SelectedItemsBox}" />
             </UniformGrid>
         </GroupBox>
