--- a/ProjectPlaneCurves/Views/Windows/MainWindow.xaml
+++ b/ProjectPlaneCurves/Views/Windows/MainWindow.xaml
@@ -100,7 +100,8 @@
                         Margin="0,10" />
                 <Button Style="{StaticResource SelectButton}"
                         Content="Отмена"
-                        Margin="0,10"/>
+                        Margin="0,10" 
+                        Command="{Binding CloseWindowCommand}"/>
             </UniformGrid>
         </GroupBox>
     </StackPanel>
