--- a/ProjectPlaneCurves/Views/Windows/MainWindow.xaml
+++ b/ProjectPlaneCurves/Views/Windows/MainWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:local="clr-namespace:ProjectPlaneCurves"
         mc:Ignorable="d"
         Title="{Binding Title}"
-        Height="245"
+        Height="290"
         Width="350"
         Background="#f0f0f0"
         WindowStartupLocation="CenterScreen"
@@ -94,13 +94,31 @@
                          Text="{Binding FaceRepresentation}" />
             </UniformGrid>
         </GroupBox>
+        <GroupBox Header="Настройка линии"
+                  Style="{StaticResource BorderGroupStyle}">
+            <UniformGrid Columns="2">
+                <DockPanel>
+                    <TextBlock Text="Шаг вершин, м"
+                               HorizontalAlignment="Left"
+                               VerticalAlignment="Center"
+                               Margin="2,0,0,0" />
+                    <TextBox Text="{Binding PointStep}"
+                             Width="60"
+                             Height="20"
+                             HorizontalAlignment="Center"
+                             VerticalAlignment="Center"
+                             Margin="5,0,0,0"
+                             TextAlignment="Center" />
+                </DockPanel>
+            </UniformGrid>
+        </GroupBox>
         <GroupBox Header="Проецировать линии"
                   Style="{StaticResource BorderGroupStyle}">
             <UniformGrid Columns="2">
                 <Button Style="{StaticResource SelectButton}"
                         Content="Создать"
-                        Margin="0,10" 
-                        Command="{Binding CreateReferencePointsOnFaceCommand}"/>
+                        Margin="0,10"
+                        Command="{Binding CreateReferencePointsOnFaceCommand}" />
                 <Button Style="{StaticResource SelectButton}"
                         Content="Отмена"
                         Margin="0,10"
